<resources>
    <string name="app_name" translatable="false">Ping</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="repeat_password_hint">Repeat your password...</string>
    <string name="password_hint">Your password...</string>
    <string name="email_hint">Your email...</string>
    <string name="no_account">No account?</string>
    <string name="login">Login</string>
    <string name="username_hint">Your username...</string>
    <string name="apartment_image">Apartment Image</string>
    <string name="apartment_type_image">Apartment Type Image</string>
    <string name="change_password">Change password</string>
    <string name="my_posts">My posts</string>
    <string name="user_posts">User posts</string>
    <string name="message">Message</string>
    <string name="you_message"><b>You: </b></string>
    <string name="select_checkin_and_checkout_time">Select check-in and checkout dates</string>
    <string name="select_dates">Select dates</string>
    <string name="select_check_in_time">Select check-in time</string>
    <string name="please_select_dates">Please select dates</string>
    <string name="furnished">Furnished</string>
    <string name="no_furniture">No furniture</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="pricing">Pricing:</string>
    <string name="details_">Details:</string>
    <string name="booking_details">Booking details:</string>
    <string name="m2"><![CDATA[%1$s m<sup><small>2</small><sup>]]></string>
    <string name="one_room">%1$s room</string>
    <string name="please_select_payment_type">Please select payment type</string>
    <string name="anything_else">Anything else?</string>
    <string name="here_you_can_put_special_requests">Here you can put special requests for the owner to see:</string>
    <string name="please_make_sure_that">Please make sure that…</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="continue_text">Continue</string>
    <string name="your_card_details_">Your card details:</string>
    <string name="please_enter_your_card_details">Please enter your card details</string>
    <string name="pay">Pay</string>
    <string name="processing_payment">Processing payment…</string>
    <string name="new_apartment">New apartment</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="booked">Booked</string>
    <string name="paid">Paid</string>
    <string name="in_progress">In progress</string>
    <string name="finished">Finished</string>
    <string name="loading">Loading…</string>
    <string name="your_rentals">Your Rentals</string>
    <string name="leave_your_review_here">Leave your review here</string>
    <string name="share_your_experience_with_others">Share your experience with others...</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete_review">Delete review</string>
    <string name="awful_experience">Awful experience</string>
    <string name="very_bad_experience">Very bad experience</string>
    <string name="bad_experience">Bad experience</string>
    <string name="unpleasant_experience">Unpleasant experience</string>
    <string name="subpar_experience">Subpar experience</string>
    <string name="acceptable_experience">Acceptable experience</string>
    <string name="normal_experience">Normal experience</string>
    <string name="good_experience">Good experience</string>
    <string name="great_experience">Great experience</string>
    <string name="amazing_experience">Amazing experience</string>
    <string name="outstanding_experience">Outstanding experience</string>
    <string name="rating_required_to_continue">Rating required to continue</string>
    <string name="just_now">Just now</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="hours_ago">%1$s hours ago</string>
    <string name="days_ago">%1$s days ago</string>
    <string name="one_month_ago">1 month ago</string>
    <string name="months_ago">%1$s months ago</string>
    <string name="one_year_ago">1 year ago</string>
    <string name="years_ago">%1$s years ago</string>
    <string name="reviews_">Reviews:</string>
    <string name="your_chats">Your chats</string>
    <string name="nothing_found">Nothing found</string>
    <string name="change_language">Change Language</string>
    <string name="apply">Apply</string>
    <string name="rooms">%1$s rooms</string>
    <string name="choose_payment_type">Choose payment type:</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="add_new_apartment">Add new apartment</string>
    <string name="logout">Logout</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="search">Search</string>
    <string name="payment_type_">Payment type: </string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="furnishing_yes">Furnishing: Yes</string>
    <string name="furnishing_no">Furnishing: No</string>
    <string name="floor_">Floor: %1$s</string>
    <string name="rooms_">Rooms: %1$s</string>
    <string name="apt_type_house">Apartment type: House</string>
    <string name="apt_type_flat">Apartment type: Flat</string>
    <string name="acreage_">Acreage: %1$s</string>
    <string name="avg_from_reviews">%1$s from %2$s reviews</string>
    <string name="description">Description:</string>
    <string name="book_now">Book now</string>
    <string name="rate_us_now">Rate</string>
    <string name="send_message">Send message</string>
    <string name="please_enter_the_post_title">Please enter the post title...</string>
    <string name="it_s_a_flat">It\'s a flat</string>
    <string name="it_s_a_house">It\'s a house</string>
    <string name="what_s_the_floor">What\'s the floor?</string>
    <string name="amount_of_rooms">Amount of rooms?</string>
    <string name="is_it_furnished">Is it furnished?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_enter_the_acreage">Please enter the acreage...</string>
    <string name="please_enter_the_city">Please enter the city...</string>
    <string name="please_enter_the_address">Please enter the address...</string>
    <string name="please_describe_your_apartment">Please describe your apartment...</string>
    <string name="please_set_the_price">Please set the price...</string>
    <string name="per_day">Per day</string>
    <string name="per_week">Per week</string>
    <string name="per_month">Per month</string>
    <string name="upload_apartment">Upload apartment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="chats">Chats</string>
    <string name="my_profile">My profile</string>
    <string name="card_payment">Card Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="booking_apartment">Booking apartment</string>
    <string name="clear">Clear</string>
    <string name="change_currency">Change Currency</string>
    <string name="currency_failed_toast">Network failure. Please try again.</string>
    <string name="choose_currency_">Choose currency:</string>
    <string name="choose_language_">Choose language:</string>
    <string name="total_to_pay">Total to pay:</string>
    <string name="total">Total:</string>
    <string name="ping_fee_2">Ping fee (2%):</string>
    <string name="apartment_price">Apartment price:</string>
    <string name="check_in_time">Check-in time:</string>
    <string name="sort_by">Sort by:</string>
    <string name="default_string">Default</string>
    <string name="price_per_day">Price/day</string>
    <string name="time_posted">Time posted</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="acreage">Acreage</string>
    <string name="room_amount">Room amount</string>
    <string name="sort_order">Sort order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="please_choose_an_option">Please choose an option</string>
    <string name="showing_results_for_"><![CDATA[Showing results for %1$s:]]></string>
    <string name="filters">Filters</string>
    <string name="clear_filters">Clear filters</string>
    <string name="apartment_type">Apartment type:</string>
    <string name="flat">Flat</string>
    <string name="house">House</string>
    <string name="both">Both</string>
    <string name="furniture_">Furniture:</string>
    <string name="all">All</string>
    <string name="rent_type">Rent type:</string>
    <string name="rating_range">Rating range:</string>
    <string name="floor_range">Floor range:</string>
    <string name="room_range">Room range:</string>
    <string name="price_range">Price range:</string>
    <string name="apply_filters">Apply filters</string>
    <string name="special_wishes_">Special wishes:</string>
    <string name="title">Title</string>
    <string name="choose_the_location">Choose the location:</string>
    <string name="please_select_location">Please select the location</string>
    <string name="please_choose_a_location_error">Please choose a location</string>
    <string name="please_enter_the_title">Please enter the title</string>
    <string name="please_specify_the_floor">Please specify the floor</string>
    <string name="please_enter_the_amount_of_rooms">Please enter the amount of rooms</string>
    <string name="please_enter_the_price">Please enter the price</string>
    <string name="please_provide_description">Please provide description</string>
    <string name="please_specify_the_acreage">Please specify the acreage</string>
    <string name="at_least_one_image_is_required">At least one image is required</string>
    <string name="network_error_message">Network error. Please check your internet connection and try again.</string>
    <string name="hello_user">Hello, %1$s</string>
</resources>