<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:background="@drawable/rounded_bg_16dp"
    android:layout_marginEnd="16dp"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/choose_the_location"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#676767" />

    <com.cloudlevi.ping.view.CustomMapView
        android:id="@+id/mapView"
        android:layout_gravity="center"
        android:layout_height="300dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/mapError"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:text="@string/please_choose_a_location_error"
        style="@style/ErrorStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negBtn"
            style="@style/RegularTextStyle"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:background="@drawable/ripple_simple_bg"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:text="@string/cancel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/posBtn"
            style="@style/RegularTextStyle"
            android:layout_gravity="center"
            android:background="@drawable/ripple_simple_bg"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:text="@string/apply"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>