<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_bg_16dp"
    android:backgroundTint="@color/bg_main"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/titleTV"
        style="@style/BoldTextStyle"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/leave_your_review_here"
        android:textSize="20sp" />

    <TextView
        style="@style/RegularTextStyle"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="How would you rate your experience?" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:minHeight="0dp"
        android:numStars="5" />

    <TextView
        android:id="@+id/ratingTV"
        style="@style/RegularTextStyle"
        android:gravity="center"
        tools:text="Great" />

    <TextView
        android:id="@+id/errorTV"
        style="@style/ErrorStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rating_required_to_continue"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/TextInputStyle"
        app:boxBackgroundColor="@color/bg_helper"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/share_your_experience_with_others"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="24dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="24dp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>