<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".ui.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <TextView-->
<!--            android:id="@+id/loginTV"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="64dp"-->
<!--            android:textColor="@color/text_color"-->
<!--            android:text="Please sign in:"-->
<!--            android:textSize="32sp" />-->

        <LinearLayout
            android:id="@+id/loginForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginEditText"
                style="@style/EditTextAuthTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/EditTextAuthTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginButton"
                android:layout_width="280dp"
                android:clickable="true"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/bg_helper"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginForm"
            android:layout_alignStart="@id/loginForm"
            android:layout_alignLeft="@id/loginForm"
            android:layout_alignEnd="@id/loginForm"
            android:layout_alignRight="@id/loginForm"
            android:textColor="@color/text_color"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/no_account"
            android:textSize="16sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>